--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,10 +6,10 @@
 
 /* You can override the default Infima variables here. */
 
-@import './variables/colors.modules.css';
+@import "./variables/colors.modules.css";
 
 :root {
-  --ifm-color-primary: #093E6D;
+  --ifm-color-primary: #093e6d;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
@@ -21,8 +21,8 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #B2C4D3;
+[data-theme="dark"] {
+  --ifm-color-primary: #b2c4d3;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
@@ -90,4 +90,20 @@
   padding: 0.2rem;
   font-weight: 750;
   margin-right: 1rem;
+}
+
+.code-block-highlighted-line {
+  background-color: #ffea0020;
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+  border-left: 3px solid #ffea0080;
+}
+
+.code-block-error-line {
+  background-color: #ff000020;
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+  border-left: 3px solid #ff000080;
 }
