--- a/src/components/ApexEditor/styles.module.css
+++ b/src/components/ApexEditor/styles.module.css
@@ -28,3 +28,20 @@
   font-size: 1.25rem;
   font-weight: bold;
 }
+
+.dropdown {
+  line-height: 80px;
+  text-align: center;
+}
+
+.dropdown h2 {
+  display: inline-block;
+  margin-right: 1rem;
+}
+
+.dropdown select {
+  font-size: 1.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 0.1rem 0.5rem;
+}
