--- a/src/components/ApexEditor/styles.module.css
+++ b/src/components/ApexEditor/styles.module.css
@@ -12,6 +12,11 @@
   border-radius: "4px";
 }
 
+.codeEditor {
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+    "Courier New", monospace;
+}
+
 .error {
   position: absolute;
   top: 90px;
