--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,7 +17,9 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
+  --ifm-pre-background: #1e1e1e;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-code-font-size: 13px;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
